--- a/index.html
+++ b/index.html
@@ -1361,15 +1361,8 @@ function openSessionDetail(activityId){
 }
 
 // ❌ PADAMKAN fungsi duplikasi ini kalau ada:
-// function escapeHtml(s){
-  s = String(s || '');
-  s = s.replace(/&/g, '&amp;');
-  s = s.replace(/</g, '&lt;');
-  s = s.replace(/>/g, '&gt;');
-  s = s.replace(/"/g, '&quot;');
-  s = s.replace(/'/g, '&#039;');
-  return s;
-}
+// function escapeHtml(s){ ... }
+
 // Henti polling bila keluar dari skrin monitor
 window.addEventListener('hashchange', ()=>{
   const onMonitor = location.hash.includes('#monitor');
@@ -4902,15 +4895,8 @@ if (btn) {
   function $(sel){ return document.querySelector(sel); }
   function $all(sel){ return Array.from(document.querySelectorAll(sel)); }
   function escapeHtml(s){
-  s = String(s || '');
-  s = s.replace(/&/g, '&amp;');
-  s = s.replace(/</g, '&lt;');
-  s = s.replace(/>/g, '&gt;');
-  s = s.replace(/"/g, '&quot;');
-  s = s.replace(/'/g, '&#039;');
-  return s;
-}
-[m]));
+    if (s == null) return '';
+    return String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
   }
   async function fetchJson(url, opt={}, timeoutMs=20000){
     const ctl = new AbortController();
@@ -5379,51 +5365,59 @@ if (btn) {
 </script>
 
 
-
-
-
 <script>
 /* === KONFIG (ISI NILAI ANDA) === */
-var SCRIPT_URL = 'PASTE_WEB_APP_URL_HERE'; // e.g. https://script.google.com/macros/s/xxxx/exec
+var SCRIPT_URL = 'PASTE_WEB_APP_URL_HERE'; // contoh: https://script.google.com/macros/s/xxxx/exec
 var GOOGLE_CLIENT_ID = 'PASTE_CLIENT_ID.apps.googleusercontent.com';
 var ID_TOKEN = '';
 
-/* === Google Sign-In === */
-function handleCredentialResponse(resp){
-  ID_TOKEN = resp && resp.credential ? resp.credential : '';
-  if (!ID_TOKEN){ toast('Login gagal: tiada token', 'danger'); return; }
-  // whoami (opsyenal tapi baik untuk sahkan akses)
-  fetch(SCRIPT_URL + '?' + new URLSearchParams({action:'whoami', id_token:ID_TOKEN}))
-    .then(function(r){ return r.json(); })
-    .then(function(j){
-      if (j.status === 'success') {
-        var badge = document.getElementById('staffBadge');
-        if (badge) badge.classList.remove('d-none');
-        var em = document.getElementById('staffEmail');
-        if (em) em.textContent = j.email || '';
-        if (location.hash === '#sejarah') { loadSejarahPrograms(); }
-      } else {
-        toast('Akses ditolak (' + (j.code||'') + ')', 'danger');
-      }
-    })
-    .catch(function(e){ toast('Ralat whoami: ' + e.message, 'danger'); });
-}
+/* === Google Sign-In (Popup mode) === */
+(function(){
+  function handleCredentialResponse(resp){
+    ID_TOKEN = resp && resp.credential ? resp.credential : '';
+    if (!ID_TOKEN){ toast('Login gagal: tiada token', 'danger'); return; }
+    // whoami untuk sahkan akses
+    fetch(SCRIPT_URL + '?' + new URLSearchParams({action:'whoami', id_token:ID_TOKEN}))
+      .then(function(r){ return r.json(); })
+      .then(function(j){
+        if (j.status === 'success'){
+          var badge = document.getElementById('staffBadge'); if (badge) badge.classList.remove('d-none');
+          var em = document.getElementById('staffEmail'); if (em) em.textContent = j.email || '';
+          if (location.hash === '#sejarah'){ loadSejarahPrograms(); }
+        } else {
+          toast('Akses ditolak (' + (j.code||'') + ')', 'danger');
+        }
+      })
+      .catch(function(e){ toast('Ralat whoami: ' + e.message, 'danger'); });
+  }
+  window.__gisCallback = handleCredentialResponse;
 
-window.addEventListener('load', function(){
-  if (window.google && google.accounts && google.accounts.id){
+  function initGIS(){
+    if (!(window.google && google.accounts && google.accounts.id)) return;
     try{
-      google.accounts.id.initialize({ client_id: GOOGLE_CLIENT_ID, callback: handleCredentialResponse });
+      google.accounts.id.initialize({
+        client_id: GOOGLE_CLIENT_ID,
+        callback: window.__gisCallback,
+        ux_mode: 'popup'
+      });
       var btn = document.getElementById('signinArea') || document.body;
       google.accounts.id.renderButton(btn, { theme:'outline', size:'medium' });
-    }catch(e){ /* ignore */ }
+      // Opsyenal: tunjuk prompt
+      // google.accounts.id.prompt();
+    }catch(e){ /* ignore init errors */ }
   }
-});
+  if (document.readyState === 'complete' || document.readyState === 'interactive'){
+    setTimeout(initGIS, 0);
+  } else {
+    window.addEventListener('DOMContentLoaded', initGIS);
+  }
+})();
 
 /* === Toast util (Bootstrap) === */
 function toast(msg, type){
   if (type === void 0) type = 'info';
   var host = document.getElementById('toastContainer');
-  if (!host) { alert(msg); return; }
+  if (!host) { try{ alert(msg); }catch(e){} return; }
   var el = document.createElement('div');
   el.className = 'toast align-items-center text-bg-' + type;
   el.setAttribute('role','alert');
@@ -5432,7 +5426,7 @@ function toast(msg, type){
   el.innerHTML = '<div class="d-flex"><div class="toast-body">' + escapeHtml(msg) + '</div>' +
                  '<button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button></div>';
   host.appendChild(el);
-  new bootstrap.Toast(el, { delay: 4000 }).show();
+  try{ new bootstrap.Toast(el, { delay: 4000 }).show(); }catch(e){}
 }
 
 /* === SEJARAH === */
@@ -5478,18 +5472,17 @@ function renderProgramList(filterText){
     var a = document.createElement('a');
     a.href = 'javascript:void(0)';
     a.className = 'list-group-item list-group-item-action d-flex justify-content-between align-items-center';
-    a.innerHTML = '<div>' +
-                    '<div class="fw-semibold">'+ escapeHtml(it.title||'') +'</div>' +
-                    '<div class="small text-muted"><i class="bi bi-calendar3 me-1"></i>'+ escapeHtml(it.programDate||'') +'</div>' +
-                  '</div>' +
-                  '<div class="text-nowrap small">' +
-                    '<span class="badge rounded-pill text-bg-success me-1">'+ (it.layakCount||0) +'</span>' +
-                    '<span class="badge rounded-pill text-bg-danger me-1">'+ (it.takLayakCount||0) +'</span>' +
-                    '<span class="badge rounded-pill text-bg-secondary">'+ (it.total||0) +'</span>' +
-                  '</div>';
-    (function(meta){
-      a.addEventListener('click', function(){ loadSejarahDetail(meta.activityId, meta); });
-    })(it);
+    a.innerHTML =
+      '<div>' +
+        '<div class="fw-semibold">'+ escapeHtml(it.title||'') +'</div>' +
+        '<div class="small text-muted"><i class="bi bi-calendar3 me-1"></i>'+ escapeHtml(it.programDate||'') +'</div>' +
+      '</div>' +
+      '<div class="text-nowrap small">' +
+        '<span class="badge rounded-pill text-bg-success me-1">'+ (it.layakCount||0) +'</span>' +
+        '<span class="badge rounded-pill text-bg-danger me-1">'+ (it.takLayakCount||0) +'</span>' +
+        '<span class="badge rounded-pill text-bg-secondary">'+ (it.total||0) +'</span>' +
+      '</div>';
+    (function(meta){ a.addEventListener('click', function(){ loadSejarahDetail(meta.activityId, meta); }); })(it);
     listEl.appendChild(a);
   }
 }
@@ -5560,20 +5553,17 @@ function escapeHtml(s){
   s = s.replace(/'/g, '&#039;');
   return s;
 }
-[m]);
-  });
-}
 
 /* Wire-up */
 window.addEventListener('hashchange', function(){
   if (location.hash === '#sejarah'){ loadSejarahPrograms(); }
 });
-var pf = document.getElementById('programFilter');
-if (pf){
-  pf.addEventListener('input', function(e){
-    renderProgramList(e.target.value || '');
-  });
-}
+(function(){
+  var pf = document.getElementById('programFilter');
+  if (pf){
+    pf.addEventListener('input', function(e){ renderProgramList(e.target.value || ''); });
+  }
+})();
 </script>
 
 </body>
