--- a/index.html
+++ b/index.html
@@ -5367,8 +5367,8 @@ if (btn) {
 
 <script>
 /* === KONFIG (ISI NILAI ANDA) === */
-var SCRIPT_URL = 'PASTE_WEB_APP_URL_HERE'; // contoh: https://script.google.com/macros/s/xxxx/exec
-var GOOGLE_CLIENT_ID = 'PASTE_CLIENT_ID.apps.googleusercontent.com';
+var SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec'; // contoh: https://script.google.com/macros/s/xxxx/exec
+var GOOGLE_CLIENT_ID = '863564124015-838ksbuk27f0kkomm16hnc3bu608pbrr.apps.googleusercontent.com';
 var ID_TOKEN = '';
 
 /* === Google Sign-In (Popup mode) === */
