--- a/index.html
+++ b/index.html
@@ -4219,7 +4219,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
     if (!tbody) return;
     tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Memuat data…</td></tr>';
     try{
-      const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: (window.ID_TOKEN||'') });
+      const qs = new URLSearchParams({ action:'getNadiActivityDetail', activityId: activityId, id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`);
       const j = await res.json();
       if (!j || j.status!=='success') throw new Error(j && (j.message||j.code) || 'Gagal ambil detail');
@@ -4839,7 +4839,7 @@ if (btn) {
     if (!tbody) return;
     tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Memuat perincian…</td></tr>';
     try{
-      const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: (window.ID_TOKEN||'') });
+      const qs = new URLSearchParams({ action:'getNadiActivityDetail', activityId: activityId, id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`, { credentials:'omit' });
       const j = await res.json();
       if (!j || j.status!=='success') throw new Error((j && (j.message||j.code)) || 'Gagal ambil detail');
@@ -4973,7 +4973,7 @@ if (btn) {
     const q = ($('#sejarahSearch')?.value || '').toLowerCase().trim();
     tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Memuat data…</td></tr>';
     try{
-      const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: window.ID_TOKEN||'' });
+      const qs = new URLSearchParams({ action:'getNadiActivityDetail', activityId: activityId, id_token: window.ID_TOKEN||'' });
       const j = await fetchJson(`${window.SCRIPT_URL}?${qs.toString()}`);
       if (!j || j.status !== 'success') throw new Error((j && (j.message||j.code)) || 'Ralat memuat detail');
       const rows = (Array.isArray(j.data) ? j.data : [])
@@ -5361,208 +5361,6 @@ if (btn) {
   // Expose globals expected by other code (compatibility)
   window.loadPrograms = loadPrograms;
   window.loadProgramDetail = loadProgramDetail;
-})();
-</script>
-
-
-<script>
-/* === KONFIG (ISI NILAI ANDA) === */
-var SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec'; // contoh: https://script.google.com/macros/s/xxxx/exec
-var GOOGLE_CLIENT_ID = '863564124015-838ksbuk27f0kkomm16hnc3bu608pbrr.apps.googleusercontent.com';
-var ID_TOKEN = '';
-
-/* === Google Sign-In (Popup mode) === */
-(function(){
-  function handleCredentialResponse(resp){
-    ID_TOKEN = resp && resp.credential ? resp.credential : '';
-    if (!ID_TOKEN){ toast('Login gagal: tiada token', 'danger'); return; }
-    // whoami untuk sahkan akses
-    fetch(SCRIPT_URL + '?' + new URLSearchParams({action:'whoami', id_token:ID_TOKEN}))
-      .then(function(r){ return r.json(); })
-      .then(function(j){
-        if (j.status === 'success'){
-          var badge = document.getElementById('staffBadge'); if (badge) badge.classList.remove('d-none');
-          var em = document.getElementById('staffEmail'); if (em) em.textContent = j.email || '';
-          if (location.hash === '#sejarah'){ loadSejarahPrograms(); }
-        } else {
-          toast('Akses ditolak (' + (j.code||'') + ')', 'danger');
-        }
-      })
-      .catch(function(e){ toast('Ralat whoami: ' + e.message, 'danger'); });
-  }
-  window.__gisCallback = handleCredentialResponse;
-
-  function initGIS(){
-    if (!(window.google && google.accounts && google.accounts.id)) return;
-    try{
-      google.accounts.id.initialize({
-        client_id: GOOGLE_CLIENT_ID,
-        callback: window.__gisCallback,
-        ux_mode: 'popup'
-      });
-      var btn = document.getElementById('signinArea') || document.body;
-      google.accounts.id.renderButton(btn, { theme:'outline', size:'medium' });
-      // Opsyenal: tunjuk prompt
-      // google.accounts.id.prompt();
-    }catch(e){ /* ignore init errors */ }
-  }
-  if (document.readyState === 'complete' || document.readyState === 'interactive'){
-    setTimeout(initGIS, 0);
-  } else {
-    window.addEventListener('DOMContentLoaded', initGIS);
-  }
-})();
-
-/* === Toast util (Bootstrap) === */
-function toast(msg, type){
-  if (type === void 0) type = 'info';
-  var host = document.getElementById('toastContainer');
-  if (!host) { try{ alert(msg); }catch(e){} return; }
-  var el = document.createElement('div');
-  el.className = 'toast align-items-center text-bg-' + type;
-  el.setAttribute('role','alert');
-  el.setAttribute('aria-live','assertive');
-  el.setAttribute('aria-atomic','true');
-  el.innerHTML = '<div class="d-flex"><div class="toast-body">' + escapeHtml(msg) + '</div>' +
-                 '<button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button></div>';
-  host.appendChild(el);
-  try{ new bootstrap.Toast(el, { delay: 4000 }).show(); }catch(e){}
-}
-
-/* === SEJARAH === */
-var sejarah = { programs: [], currentId: '' };
-
-function loadSejarahPrograms(){
-  if (!SCRIPT_URL || !/^https?:\/\//.test(SCRIPT_URL)) { toast('SCRIPT_URL belum ditetapkan', 'warning'); return; }
-  if (!ID_TOKEN) { toast('Sila log masuk Google dahulu', 'warning'); return; }
-  var listEl = document.getElementById('programList');
-  if (listEl) listEl.innerHTML = '<div class="p-3 text-muted">Memuat senarai program…</div>';
-
-  var url = SCRIPT_URL + '?' + new URLSearchParams({ action:'getNadiActivities', id_token:ID_TOKEN });
-  fetch(url)
-    .then(function(r){ return r.json(); })
-    .then(function(json){
-      if (json.status !== 'success') throw new Error(json.message || 'Gagal dapatkan senarai program');
-      sejarah.programs = Array.isArray(json.data) ? json.data : [];
-      renderProgramList('');
-    })
-    .catch(function(e){
-      if (listEl) listEl.innerHTML = '<div class="p-3 text-danger">Gagal memuat senarai program: ' + escapeHtml(e.message) + '</div>';
-    });
-}
-
-function renderProgramList(filterText){
-  if (filterText === void 0) filterText = '';
-  var listEl = document.getElementById('programList');
-  if (!listEl) return;
-  var ft = String(filterText||'').toLowerCase();
-  var items = [];
-  for (var i=0;i<sejarah.programs.length;i++){
-    var p = sejarah.programs[i];
-    var key = (String(p.title||'') + ' ' + String(p.programDate||'')).toLowerCase();
-    if (!ft || key.indexOf(ft) >= 0) items.push(p);
-  }
-  if (!items.length){
-    listEl.innerHTML = '<div class="p-3 text-muted">Tiada program ditemui.</div>';
-    return;
-  }
-  listEl.innerHTML = '';
-  for (var j=0;j<items.length;j++){
-    var it = items[j];
-    var a = document.createElement('a');
-    a.href = 'javascript:void(0)';
-    a.className = 'list-group-item list-group-item-action d-flex justify-content-between align-items-center';
-    a.innerHTML =
-      '<div>' +
-        '<div class="fw-semibold">'+ escapeHtml(it.title||'') +'</div>' +
-        '<div class="small text-muted"><i class="bi bi-calendar3 me-1"></i>'+ escapeHtml(it.programDate||'') +'</div>' +
-      '</div>' +
-      '<div class="text-nowrap small">' +
-        '<span class="badge rounded-pill text-bg-success me-1">'+ (it.layakCount||0) +'</span>' +
-        '<span class="badge rounded-pill text-bg-danger me-1">'+ (it.takLayakCount||0) +'</span>' +
-        '<span class="badge rounded-pill text-bg-secondary">'+ (it.total||0) +'</span>' +
-      '</div>';
-    (function(meta){ a.addEventListener('click', function(){ loadSejarahDetail(meta.activityId, meta); }); })(it);
-    listEl.appendChild(a);
-  }
-}
-
-function loadSejarahDetail(activityId, meta){
-  if (!activityId) return;
-  sejarah.currentId = activityId;
-  var h = document.getElementById('sejarahTitle'); if (h) h.textContent = (meta && meta.title) ? meta.title : 'Maklumat Program';
-  var d = document.getElementById('programDateLabel'); if (d) d.textContent = (meta && meta.programDate) ? meta.programDate : '';
-  var tbody = document.getElementById('sejarahTable');
-  if (tbody) tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted py-4">Memuat butiran peserta…</td></tr>';
-
-  var url = SCRIPT_URL + '?' + new URLSearchParams({ action:'getNadiActivityDetail', activityId:activityId, id_token:ID_TOKEN });
-  fetch(url)
-    .then(function(r){ return r.json(); })
-    .then(function(json){
-      if (json.status !== 'success') throw new Error(json.message || 'Gagal muat butiran');
-      var rows = Array.isArray(json.data) ? json.data : [];
-      var t = document.getElementById('sumTotal'); if (t) t.textContent = rows.length;
-      var layak=0, tak=0;
-      for (var i=0;i<rows.length;i++){
-        var st = String(rows[i].status||'').toUpperCase();
-        if (st === 'LAYAK') layak++;
-        else if (st === 'TAK LAYAK') tak++;
-      }
-      var sl = document.getElementById('sumLayak'); if (sl) sl.textContent = layak;
-      var sk = document.getElementById('sumTakLayak'); if (sk) sk.textContent = tak;
-
-      if (!tbody) return;
-      if (!rows.length){
-        tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted py-4">Tiada peserta.</td></tr>';
-        return;
-      }
-      var html = '';
-      for (var r=0;r<rows.length;r++){
-        var row = rows[r];
-        var tca = [row.tcaDate||'', row.tcaTime||''].filter(function(x){ return !!x; }).join(' ');
-        html += '<tr>' +
-          '<td>'+(r+1)+'</td>' +
-          '<td>'+escapeHtml(row.nama||'')+'</td>' +
-          '<td>'+escapeHtml(row.noIC||'')+'</td>' +
-          '<td>'+escapeHtml(row.noTelefon||'')+'</td>' +
-          '<td class="col-alamat">'+escapeHtml(row.alamat||'')+'</td>' +
-          '<td>'+escapeHtml(row.status||'')+'</td>' +
-          '<td>'+escapeHtml(row.bp||'')+'</td>' +
-          '<td>'+escapeHtml(row.pr||'')+'</td>' +
-          '<td>'+escapeHtml(row.dxt||'')+'</td>' +
-          '<td>'+escapeHtml(row.bmi||'')+'</td>' +
-          '<td>'+escapeHtml(tca)+'</td>' +
-          '<td>'+escapeHtml(row.tcaStaff||'')+'</td>' +
-          '<td>'+escapeHtml(row.remark||'')+'</td>' +
-        '</tr>';
-      }
-      tbody.innerHTML = html;
-    })
-    .catch(function(e){
-      if (tbody) tbody.innerHTML = '<tr><td colspan="13" class="text-danger">Ralat: '+escapeHtml(e.message)+'</td></tr>';
-    });
-}
-
-/* Util */
-function escapeHtml(s){
-  s = String(s || '');
-  s = s.replace(/&/g, '&amp;');
-  s = s.replace(/</g, '&lt;');
-  s = s.replace(/>/g, '&gt;');
-  s = s.replace(/"/g, '&quot;');
-  s = s.replace(/'/g, '&#039;');
-  return s;
-}
-
-/* Wire-up */
-window.addEventListener('hashchange', function(){
-  if (location.hash === '#sejarah'){ loadSejarahPrograms(); }
-});
-(function(){
-  var pf = document.getElementById('programFilter');
-  if (pf){
-    pf.addEventListener('input', function(e){ renderProgramList(e.target.value || ''); });
-  }
 })();
 </script>
 
