--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   // =========================
   // KONFIGURASI (WAJIB GANTIKAN)
   // =========================
-  const SCRIPT_URL = "PASTE_WEB_APP_URL_HERE"; // contoh: https://script.google.com/macros/s/AKfycbx.../exec
-  const GOOGLE_CLIENT_ID = "PASTE_CLIENT_ID.apps.googleusercontent.com";
+  const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec"; // contoh: https://script.google.com/macros/s/AKfycbx.../exec
+  const GOOGLE_CLIENT_ID = "863564124015-838ksbuk27f0kkomm16hnc3bu608pbrr.apps.googleusercontent.com";
 
   // =========================
   // STATE
